add_subdirectory (Units)
add_subdirectory (Turetts)
add_subdirectory (ShootFx)
add_subdirectory (AirBombs)
add_subdirectory (Explosion)

configure_file ("Help.png" ${CMAKE_BINARY_DIR} COPYONLY)
configure_file ("Names-Intro.png" ${CMAKE_BINARY_DIR} COPYONLY)
configure_file ("Logo-Intro.png" ${CMAKE_BINARY_DIR} COPYONLY)
configure_file ("Win.png" ${CMAKE_BINARY_DIR} COPYONLY)
configure_file ("Castle.png" ${CMAKE_BINARY_DIR} COPYONLY)
configure_file ("GameOver.png" ${CMAKE_BINARY_DIR} COPYONLY)
configure_file ("EnemyCastle.png" ${CMAKE_BINARY_DIR} COPYONLY)
configure_file ("MainMenu.png" ${CMAKE_BINARY_DIR} COPYONLY)
configure_file ("Play.png" ${CMAKE_BINARY_DIR} COPYONLY)
configure_file ("PlayBlur.png" ${CMAKE_BINARY_DIR} COPYONLY)